--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </section>
 
       <footer>
-        <span>© 2025 Recoverly. All rights reserved.</span>
+        <span>© 2025 Rich Rabin. All rights reserved.</span>
         <span>
           <a href="https://richr44.github.io/recoverly-privacy/" target="_blank" rel="noopener noreferrer">
             Privacy policy
