--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     * {
       box-sizing: border-box;
     }
+    .site-branding {
+  width: 100%;
+  padding: 24px 0 8px 0;
+}
+
+.brand {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--accent);
+  letter-spacing: -0.3px;
+}
 
     body {
       margin: 0;
@@ -323,6 +334,9 @@
   </style>
 </head>
 <body>
+<header class="site-branding">
+  <div class="brand">Recoverly</div>
+</header>
   <div class="page">
     <main class="shell">
       <header class="hero">
