--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     .site-branding {
   width: 100%;
   padding: 24px 0 8px 0;
+  padding-left: 12px;
 }
 
 .brand {
@@ -47,7 +48,7 @@
     align-items: center;
     gap: 10px;
     text-decoration: none;
-    padding: 12px 0;       /* improved header spacing */
+    padding: 14px 0;       /* improved header spacing */
 }
 .brand:hover {
     opacity: 0.75;         /* subtle polish */
