--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     * {
       box-sizing: border-box;
     }
-    .site-branding {
-  width: 100%;
-  padding: 24px 0 8px 0;
-  padding-left: 12px;
+.site-branding {
+  position: fixed;
+  top: 24px;
+  left: 32px;
+  z-index: 20;
 }
 
 .brand {
@@ -97,7 +98,7 @@
         grid-template-columns: minmax(0, 1fr);
       }
       .page {
-        padding-top: 24px;
+       padding-top: 80px;
       }
     }
 
