--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
 </head>
 <body>
 <header class="site-branding">
-<a href="/" class="brand">
-    <img src="favicon.png" class="brand-icon" alt="Recoverly logo">
-    Recoverly
+<a href="./" class="brand-link">
+  <img src="recoverly-icon.svg" alt="" class="brand-mark" />
+  <span class="brand">Recoverly</span>
 </a>
 </header>
   <div class="page">
