--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 <body>
 <header class="site-branding">
 <a href="./" class="brand-link">
-  <img src="recoverly-icon.svg" alt="" class="brand-mark" />
+  <img src="favicon.png" alt="" class="brand-mark" />
   <span class="brand">Recoverly</span>
 </a>
 </header>
