--- a/index.html
+++ b/index.html
@@ -40,17 +40,10 @@
   z-index: 20;
 }
 
-.site-branding {
-  position: fixed;
-  top: 24px;
-  left: 32px;
-  z-index: 20;
-}
-
 .brand {
     font-size: 20px;
     font-weight: 600;
-    color: var(--accent);
+    color: var(--text-main);   /* recommended */
     letter-spacing: -0.3px;
     display: flex;
     align-items: center;
@@ -69,7 +62,6 @@
     height: 22px;
     border-radius: 6px;
 }    
-    
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
