--- a/index.html
+++ b/index.html
@@ -404,10 +404,11 @@
               <span class="sub">Not yet available</span>
             </button>
 
-            <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-              Get email updates (coming soon)
-            </a>
+          <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
+          Contact us
+          </a>
           </div>
+          <p class="note-text">Questions or feedback? Reach out anytime.</p>
 
           <p class="note-text">
             Recoverly doesn’t replace your surgeon or physical therapist. It’s
