--- a/index.html
+++ b/index.html
@@ -390,16 +390,15 @@
             Built for spine & nerve recovery
           </div>
 
-          <h1>
-            Recovery you can <span class="accent">see</span> — without guessing
-            what’s “normal”.
-          </h1>
+<h1>
+  Recovery you can <span class="accent">see</span> — so you’re not relying on memory alone.
+</h1>
 
-          <p class="tagline">
-            Recoverly helps you track back pain, leg nerve symptoms, and daily
-            activity so you can understand your recovery after lumbar or nerve
-            surgery and bring clear data to your follow-up visits.
-          </p>
+<p class="tagline">
+  Recoverly helps you track back pain, leg nerve symptoms, and daily activity
+  so you can see how your own recovery is changing over time and bring clear
+  data to your follow-up visits — without trying to define what “normal” is.
+</p>
 
           <div class="hero-meta">
             <span class="badge">Post-surgery friendly</span>
