--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
           <p class="note-text">
             Recoverly doesn’t replace your surgeon or physical therapist. It’s
-            a tool to help you remember the details and see how things are
+            a tool to help you remember the details and see how your symptoms and activity are
             trending between visits.
           </p>
         </div>
@@ -525,7 +525,7 @@
       <section class="screens" id="screenshots">
         <h2>Preview Recoverly</h2>
         <p>
-          A few of the views you’ll use during recovery. Exact screens may
+        A preview of key screens you’ll use during recovery. Exact screens may
           change slightly as we improve the app.
         </p>
 
