--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
           </div>
           <div class="screen-card">
             <img src="screen-insights.png" alt="Recoverly Insights view" />
-            <span>Insights — clear weekly trends for pain, mobility, and nerve symptoms.</span>
+            <span>Insights — clear weekly trends for pain, movement, and nerve symptoms.</span>
           </div>
           <div class="screen-card">
             <img src="screen-report.png" alt="Recoverly PDF report preview" />
