--- a/index.html
+++ b/index.html
@@ -390,16 +390,15 @@
             Built for spine & nerve recovery
           </div>
 
-<h1>
-  Recovery you can <span class="accent">see</span> — so you’re not relying on memory alone.
-</h1>
+<h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
 
-<p class="tagline">
-  Recoverly helps you track back pain, leg nerve symptoms, and daily activity
-  so you can see how your own recovery is changing over time and bring clear
-  data to your follow-up visits — without trying to define what “normal” is.
+<p class="subtle-note">
+    Recoverly doesn’t define what’s medically normal — it simply helps you understand how <em>your own</em> symptoms change over time.
 </p>
 
+<p>
+    Recoverly helps you track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.
+</p>
           <div class="hero-meta">
             <span class="badge">Post-surgery friendly</span>
             <span class="badge">No account required</span>
@@ -422,13 +421,13 @@
             Recoverly doesn’t replace your surgeon or physical therapist. It’s
             a tool to help you remember the details and see how your symptoms and activity are
             trending between visits.
-          </p>
+          </p>x  
         </div>
 
         <!-- Right side: Why Recoverly -->
         <aside class="card">
           <h3>Why Recoverly?</h3>
-          <h2>Turn hazy weeks into clear trends.</h2>
+          <h2>Turn hazy weeks into clear, understandable trends.</h2>
           <p>
             The first weeks after surgery blur together. Was today better than
             last Tuesday? Are tingling and spasms easing up, or just moving
@@ -496,8 +495,7 @@
           <h3>Share a clean report</h3>
           <h2>Bring your care team into the picture.</h2>
           <p>
-            When you’re ready for a follow-up, Recoverly can generate a clear
-            PDF summary of your symptoms and activity to bring to your visit.
+           When you’re ready for a follow-up, Recoverly creates a clean PDF summary you can share with your care team.
           </p>
           <ul class="list-check">
             <li>
