--- a/index.html
+++ b/index.html
@@ -389,7 +389,6 @@
             <span class="pill-dot"></span>
             Built for spine & nerve recovery
           </div>
-
 <h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
 
 <p class="subtle-note">
@@ -399,30 +398,37 @@
 <p>
     Recoverly helps you track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.
 </p>
-          <div class="hero-meta">
-            <span class="badge">Post-surgery friendly</span>
-            <span class="badge">No account required</span>
-            <span>Designed by a real spine-surgery patient.</span>
-          </div>
 
-          <div class="cta-row">
-            <button class="btn-primary coming-soon" type="button">
-              Coming soon on the App Store
-              <span class="sub">Not yet available</span>
-            </button>
+<div class="hero-meta">
+  <span class="badge">Post-surgery friendly</span>
+  <span class="badge">No account required</span>
+  <span>Designed by a real spine-surgery patient.</span>
+</div>
 
-          <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-          Contact us
-          </a>
-          </div>
-          <p class="note-text">Questions or feedback? Reach out anytime.</p>
+<!-- 👇 New personal story line -->
+<p class="subtle-note">
+    I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting which days were actually better or worse.
+</p>
 
-          <p class="note-text">
-            Recoverly doesn’t replace your surgeon or physical therapist. It’s
-            a tool to help you remember the details and see how your symptoms and activity are
-            trending between visits.
-          </p>x  
-        </div>
+<div class="cta-row">
+  <button class="btn-primary coming-soon" type="button">
+    Coming soon on the App Store
+    <span class="sub">Not yet available</span>
+  </button>
+
+  <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
+    Contact us
+  </a>
+</div>
+
+<p class="note-text">Questions or feedback? Reach out anytime.</p>
+
+<p class="note-text">
+  Recoverly doesn’t replace your surgeon or physical therapist. It’s
+  a tool to help you remember the details and see how your symptoms and activity are
+  trending between visits.
+</p>
+          
 
         <!-- Right side: Why Recoverly -->
         <aside class="card">
