--- a/index.html
+++ b/index.html
@@ -413,6 +413,10 @@
             <span class="badge">No account required</span>
             <span>Designed by a real spine-surgery patient.</span>
           </div>
+          
+          <p class="subtle-note">
+          No account, no cloud — your recovery data stays on your device unless you choose to export a PDF.
+          </p>
 
           <!-- Personal story line -->
           <p class="subtle-note">
@@ -447,6 +451,7 @@
             The first weeks after surgery blur together. Was today better than
             last Tuesday? Are tingling and spasms easing up, or just moving
             around?
+            <p><strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar back/nerve procedures.</p>
           </p>
           <p>
             Recoverly gives you a simple way to log each day and see those
@@ -476,6 +481,16 @@
         </aside>
       </header>
 
+    <section class="card" style="margin-bottom: 24px;">
+  <h3>How Recoverly works</h3>
+  <h2>A simple daily flow — built for real recovery.</h2>
+  <ul class="list-check">
+    <li><span class="icon">✔</span><span>Log your day once — pain, nerve symptoms, movement, and notes.</span></li>
+    <li><span class="icon">✔</span><span>See clearer patterns in History and Insights week over week.</span></li>
+    <li><span class="icon">✔</span><span>Export a clean PDF summary before follow-up visits.</span></li>
+  </ul>
+</section>
+      
       <!-- Two main cards -->
       <section class="card-grid">
         <article class="card">
