--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="canonical" href="https://richr44.github.io/recoverly/">
   <title>Recoverly — Back & Nerve Recovery Tracker</title>
 
   <!-- Basic SEO -->
@@ -10,6 +11,18 @@
         content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits." />
   <meta name="keywords"
         content="Recoverly, spine surgery recovery, lumbar surgery, laminectomy, discectomy, nerve pain tracker, back pain app, surgery recovery app" />
+  <meta property="og:type" content="website">
+<meta property="og:title" content="Recoverly — Spine & Nerve Recovery Tracker">
+<meta property="og:description"
+      content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits.">
+<meta property="og:url" content="https://richr44.github.io/recoverly/">
+<meta property="og:image" content="https://richr44.github.io/recoverly/og-image.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Recoverly — Spine & Nerve Recovery Tracker">
+<meta name="twitter:description"
+      content="Track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.">
+<meta name="twitter:image" content="https://richr44.github.io/recoverly/og-image.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
@@ -379,6 +392,21 @@
       text-decoration-style: dotted;
     }
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Recoverly",
+  "operatingSystem": "iOS",
+  "applicationCategory": "HealthApplication",
+  "description": "Recoverly is a simple recovery tracker for back and leg nerve symptoms after spine surgery. It helps you log pain, nerve symptoms, and daily activity so you can see clear trends between follow-up visits.",
+  "url": "https://richr44.github.io/recoverly/",
+  "creator": {
+    "@type": "Person",
+    "name": "Rich Rabin"
+  }
+}
+</script>
 </head>
 <body>
   <header class="site-branding">
