--- a/index.html
+++ b/index.html
@@ -457,6 +457,16 @@
     <span class="sub">Available now</span>
   </a>
 
+    <a
+    class="btn-ghost"
+    href="https://testflight.apple.com/join/JrpAZvmp"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Join the TestFlight beta
+  </a>
+</div>
+
   <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
     Contact us
   </a>
