--- a/index.html
+++ b/index.html
@@ -445,7 +445,6 @@
           </p>
 
 
-
 <div class="cta-row">
   <a
     class="btn-primary"
@@ -457,13 +456,17 @@
     <span class="sub">Available now</span>
   </a>
 
-    <a
+  <a
     class="btn-ghost"
     href="https://testflight.apple.com/join/JrpAZvmp"
     target="_blank"
     rel="noopener noreferrer"
   >
     Join the TestFlight beta
+  </a>
+
+  <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
+    Contact us
   </a>
 </div>
 
