--- a/index.html
+++ b/index.html
@@ -423,11 +423,13 @@
           <h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
 
           <p class="subtle-note">
-            Recoverly doesn’t define what’s medically normal — it simply helps you understand how <em>your own</em> symptoms change over time.
+            Recoverly doesn’t define what’s medically normal — it simply helps you understand how
+            <em>your own</em> symptoms change over time.
           </p>
 
           <p>
-            Recoverly helps you track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.
+            Recoverly helps you track back pain, leg nerve symptoms, and daily activity so you can
+            clearly see how your recovery changes over time.
           </p>
 
           <div class="hero-meta">
@@ -435,52 +437,48 @@
             <span class="badge">No account required</span>
             <span>Designed by a real spine-surgery patient.</span>
           </div>
-                   <!-- Personal story line -->
+
+          <!-- Personal story line -->
           <p class="subtle-note">
-            I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting which days were actually better or worse.
-          </p>
-          
-          <p class="subtle-note">
-          No account, no cloud — your recovery data stays on your device unless you choose to export a PDF.
+            I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting
+            which days were actually better or worse.
           </p>
 
+          <p class="subtle-note">
+            No account, no cloud — your recovery data stays on your device unless you choose to export
+            a PDF.
+          </p>
 
-<div class="cta-row">
-  <a
-    class="btn-primary"
-    href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Download on the App Store
-    <span class="sub">Available now</span>
-  </a>
+          <div class="cta-row">
+            <a
+              class="btn-primary"
+              href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Download on the App Store
+              <span class="sub">Available now</span>
+            </a>
 
-  <a
-    class="btn-ghost"
-    href="https://testflight.apple.com/join/JrpAZvmp"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Join the TestFlight beta
-  </a>
+            <a
+              class="btn-ghost"
+              href="https://testflight.apple.com/join/JrpAZvmp"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Join the TestFlight beta
+            </a>
 
-  <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-    Contact us
-  </a>
-</div>
-
-  <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-    Contact us
-  </a>
-</div>
+            <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
+              Contact us
+            </a>
+          </div>
 
           <p class="note-text">Questions or feedback? Reach out anytime.</p>
 
           <p class="note-text">
-            Recoverly doesn’t replace your surgeon or physical therapist. It’s
-            a tool to help you remember the details and see how your symptoms and activity are
-            trending between visits.
+            Recoverly doesn’t replace your surgeon or physical therapist. It’s a tool to help you
+            remember the details and see how your symptoms and activity are trending between visits.
           </p>
         </div>
 
@@ -489,29 +487,30 @@
           <h3>Why Recoverly?</h3>
           <h2>Turn hazy weeks into clear, understandable trends.</h2>
           <p>
-            The first weeks after surgery blur together. Was today better than
-            last Tuesday? Are tingling and spasms easing up, or just moving
-            around?
-            <p><strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar back/nerve procedures.</p>
+            The first weeks after surgery blur together. Was today better than last Tuesday? Are
+            tingling and spasms easing up, or just moving around?
           </p>
           <p>
-            Recoverly gives you a simple way to log each day and see those
-            “I think so…” answers become clear charts.
+            <strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar
+            back/nerve procedures.
+          </p>
+          <p>
+            Recoverly gives you a simple way to log each day and see those “I think so…” answers
+            become clear charts.
           </p>
 
           <ul class="list-check">
             <li>
               <span class="icon">✔</span>
               <span>
-                Built around common lumbar and nerve symptoms: back pain,
-                hip/glute pain, leg nerve pain, tingling, and spasms.
+                Built around common lumbar and nerve symptoms: back pain, hip/glute pain, leg nerve
+                pain, tingling, and spasms.
               </span>
             </li>
             <li>
               <span class="icon">✔</span>
               <span>
-                Track walking and sitting tolerance so you can see how activity
-                changes week to week.
+                Track walking and sitting tolerance so you can see how activity changes week to week.
               </span>
             </li>
             <li>
@@ -521,7 +520,6 @@
           </ul>
         </aside>
       </header>
-
     <section class="card" style="margin-bottom: 24px;">
   <h3>How Recoverly works</h3>
   <h2>A simple daily flow — built for real recovery.</h2>
