--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       }
     }
 
-    .screen-card {
+.screen-card {
   background: radial-gradient(circle at top, rgba(15, 23, 42, 0.9), #020617);
   border-radius: 18px;
   border: 1px solid rgba(148, 163, 184, 0.4);
@@ -353,16 +353,15 @@
   box-shadow: 0 16px 30px rgba(0, 0, 0, 0.85);
   display: flex;
   flex-direction: column;
+  justify-content: space-between; /* keep caption pinned to bottom */
   gap: 8px;
-  align-items: center;     /* center image + caption horizontally */
-  text-align: center;      /* center the caption text */
 }
 
 .screen-card img {
   width: 100%;
-  max-width: 260px;        /* consistent phone width */
-  aspect-ratio: 9 / 19.5;  /* consistent tall-phone shape */
-  object-fit: contain;     /* keep whole screenshot visible */
+  aspect-ratio: 9 / 19.5;  /* force all screenshots to same shape */
+  object-fit: cover;       /* crop any extra instead of stretching */
+  object-position: top;    /* align cropping from the top */
   border-radius: 14px;
   display: block;
 }
