--- a/clinic/index.html
+++ b/clinic/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>Recoverly — one-page clinic handout</h1>
+  <h1>Recoverly — one-page paitent handout</h1>
 
   <p class="muted">
     Shared as an optional patient resource.
@@ -49,7 +49,7 @@
     </p>
 
     <p>
-      <a class="btn" href="../Patient_Symptom_Tracking_Handout.pdf">Download the one-page PDF handout</a>
+      <a class="btn" href="../Patient_Symptom_Tracking_Handout.pdf">Download the patient handout (PDF)</a>
     </p>
 
     <p class="muted" style="margin-top:12px;">
@@ -57,8 +57,6 @@
     </p>
   </div>
 
-  <p class="muted" style="margin-top:18px;">
-    If you reached this page from a clinic contact form: the PDF above is the handout that would normally be attached to an email.
-  </p>
+
 </body>
 </html>
