--- a/clinic/index.html
+++ b/clinic/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>Recoverly — one-page paitent handout</h1>
+  <h1>Recoverly — one-page patient handout</h1>
 
   <p class="muted">
     Shared as an optional patient resource.
