--- a/index.html
+++ b/index.html
@@ -432,8 +432,7 @@
           </p>
 
           <p>
-            Recoverly helps you track back pain, leg nerve symptoms, and daily activity so you can
-            clearly see how your recovery changes over time.
+            Recoverly helps you track back pain, nerve symptoms, and daily activity — so you can clearly see how your recovery changes over time.
           </p>
 
           <div class="hero-meta">
@@ -556,33 +555,33 @@
           </ul>
         </article>
 
-        <article class="card">
-          <h3>Share a clean report</h3>
-          <h2>Bring your care team into the picture.</h2>
-          <p>
-            When you’re ready for a follow-up, Recoverly creates a clean PDF summary you can share with your care team.
-          </p>
-          <ul class="list-check">
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Weekly charts for pain, nerve symptoms, and activity.
-              </span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>Plain-language summaries to review together.</span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Designed for laminectomy, discectomy, fusion, and other lumbar
-                procedures.
-              </span>
-            </li>
-          </ul>
-        </article>
-      </section>
+<article class="card">
+  <h3>Share a clean report</h3>
+  <h2>Bring your care team into the picture.</h2>
+  <p>
+    When you’re ready for a follow-up, Recoverly creates a clean PDF summary you can share with your care team.
+    <strong>Full PDF reports are available with Recoverly Premium.</strong>
+  </p>
+  <ul class="list-check">
+    <li>
+      <span class="icon">✔</span>
+      <span>
+        Weekly charts for pain, nerve symptoms, and activity.
+      </span>
+    </li>
+    <li>
+      <span class="icon">✔</span>
+      <span>Plain-language summaries to review together.</span>
+    </li>
+    <li>
+      <span class="icon">✔</span>
+      <span>
+        Designed for laminectomy, discectomy, fusion, and other lumbar
+        procedures.
+      </span>
+    </li>
+  </ul>
+</article></section>
 
 <!-- Screenshots -->
 <section class="screens" id="screenshots">
